test/errors/distinct_mismatch.haste
const ID = distinct int;
const x: int = 10;
const y: ID = x;
